Fix things for maven